# fireRunSeverity

./: .gitignore  README.Rmd  README.md
Python/: Initialization.bat  README.md  pyproject.toml
Python/cdsFetch/: Run_landCoverDownload.bat  landCoverDownload.py
Python/cdsFetch/notebook/: bckUP_climate_calc.ipynb  landCoverDownload.ipynb
Python/geeFetch/: Run_driveDownload.bat  Run_severityCalc.bat  driveDownload.py  main.py  severityCalc.py
Python/geeFetch/fun/: geeFunc.py
Python/geeFetch/notebook/: driveDownload.ipynb  severityCalc.ipynb
Python/tests/: fire_severity_Aus19_geemap.ipynb  fire_severity_Aus19_geemap.py  test.ipynb
Python/tests/js/: fire_severity_Aus19.js
Python/tests/tool/: earthengine_js_to_ipynb.py
R/: DataProcess.R  EnvSetup.R  GetAPIecmwfr_VPD.R  GetAPIecmwfr_Wind.R  Test_FireRun.R  analysisRuns.R  getAPIecmwfr.R  process_FireRuns.R
R/fun/: Data_Function.R  Process_Runs.R  Runs_AllArrows.r  run_Extract_severity.R  wind_Oper_Function.R
R/severity_figure/: sev_crop_comp.R
R/util/: fire_Input_Verify.R  spei_SingleFile.R
src/fireRaw/: README.md
test/: buffer_c_section.R  buffer_ellipse.R  buffer_ovoid.R  buffer_shape.R  simulate_FireRun_mechan.R
